<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:title="Main">
        <menu>
            <item
                android:id="@+id/snv_profile"
                android:title="@string/profile"
                android:icon="@drawable/profile"/>

<!--            <item-->
<!--                android:id="@+id/snv_updates"-->
<!--                android:title="@string/updates"-->
<!--                android:icon="@drawable/update"/>-->

            <item
                android:id="@+id/snv_sent"
                android:title="@string/sent"
                android:icon="@drawable/enviar"/>

        </menu>
    </item>
    <item android:title="Personal">
        <menu>
            <item
                android:id="@+id/snv_promotion"
                android:title="Promotion"
                android:icon="@drawable/promotion"/>

            <item
                android:id="@+id/snv_drafts"
                android:title="@string/drafts"
                android:icon="@drawable/drafts"/>


        </menu>
    </item>
    <item android:title="Outros">
        <menu>
            <item
                android:id="@+id/snv_trash"
                android:title="@string/trash"
                android:icon="@drawable/lixeira"/>

            <item
                android:id="@+id/settings"
                android:title="@string/settings"
                android:icon="@drawable/setting"/>

            <item
                android:id="@+id/snv_logout"
                android:title="@string/logout"
                android:icon="@drawable/exit"/>
        </menu>
    </item>
</menu>