<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!-- Conteúdo principal -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_snv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Conteúdo"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <!-- Barra inferior -->
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="77dp"
            android:background="@color/white"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:contentInsetEnd="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:gravity="center"
                android:paddingHorizontal="8dp"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/btn_usuario"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:src="@drawable/profile"
                        android:contentDescription="@string/perfil"
                        android:scaleType="fitCenter" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/btn_historico"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:src="@drawable/historico"
                        android:contentDescription="@string/historico"
                        android:scaleType="fitCenter" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/btn_adicionar"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:src="@drawable/adicionar"
                        android:background="@drawable/cirgulo"
                        android:contentDescription="@string/adicionar"
                        android:scaleType="fitCenter" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.appbar.MaterialToolbar>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Menu lateral -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nv_side"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:layout_marginBottom="90dp"
        app:itemTextColor="@color/black"
        app:menu="@menu/side_libs" />
</androidx.drawerlayout.widget.DrawerLayout>
