<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

  <!-- Conteúdo principal -->
  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

      <!-- Formulário ou conteúdo -->
      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

        <View
            android:id="@+id/container"
            style="@style/container"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_adicionar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Tela de adicionar valores"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/adicione1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="VALOR DO PRIMEIRO"
            app:layout_constraintEnd_toStartOf="@+id/campo1"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toStartOf="@+id/container"
            app:layout_constraintTop_toTopOf="@+id/container" />

        <EditText
            android:id="@+id/campo1"
            android:layout_width="90dp"
            android:layout_marginTop="16dp"
            android:height="45dp"
            android:gravity="center"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:textSize="8sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/container"
            app:layout_constraintHorizontal_bias="0.978"
            app:layout_constraintStart_toStartOf="@+id/container"
            app:layout_constraintTop_toTopOf="@id/container"
            app:layout_goneMarginTop="10dp"
            android:layout_height="0dp"/>

        <TextView
            android:id="@+id/adicione2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="VALOR DO SEGUNDO"
            app:layout_constraintEnd_toStartOf="@+id/campo2"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintStart_toStartOf="@+id/container"
            app:layout_constraintTop_toBottomOf="@+id/adicione1" />

        <EditText
            android:id="@+id/campo2"
            android:layout_width="90dp"
            android:layout_marginTop="16dp"
            android:height="45dp"
            android:gravity="center"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:textSize="8sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/container"
            app:layout_constraintHorizontal_bias="0.978"
            app:layout_constraintStart_toStartOf="@+id/container"
            app:layout_constraintTop_toBottomOf="@id/campo1"
            android:layout_height="0dp"/>


        <TextView
            android:id="@+id/adicione3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="VALOR DO TERCEIRO"
            app:layout_constraintEnd_toStartOf="@+id/campo3"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="@+id/container"
            app:layout_constraintTop_toBottomOf="@+id/adicione2" />

        <EditText
            android:id="@+id/campo3"
            android:layout_width="90dp"
            android:layout_marginTop="16dp"
            android:height="45dp"
            android:gravity="center"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:textSize="8sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/container"
            app:layout_constraintHorizontal_bias="0.978"
            app:layout_constraintStart_toStartOf="@+id/container"
            app:layout_constraintTop_toBottomOf="@id/campo2"
            android:layout_height="0dp"/>

        <TextView
            android:id="@+id/adicione4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="VALOR DO QUARTO"
            app:layout_constraintEnd_toStartOf="@+id/campo4"
            app:layout_constraintHorizontal_bias="0.477"
            app:layout_constraintStart_toStartOf="@+id/container"
            app:layout_constraintTop_toBottomOf="@+id/adicione3" />

        <EditText
            android:id="@+id/campo4"
            android:layout_width="90dp"
            android:layout_marginTop="16dp"
            android:height="45dp"
            android:gravity="center"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:textSize="8sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/container"
            app:layout_constraintHorizontal_bias="0.978"
            app:layout_constraintStart_toStartOf="@+id/container"
            app:layout_constraintTop_toBottomOf="@id/campo3"
            android:layout_height="0dp"/>

        <TextView
            android:id="@+id/adicione5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="VALOR DO QUINTO"
            app:layout_constraintEnd_toStartOf="@+id/campo5"
            app:layout_constraintHorizontal_bias="0.474"
            app:layout_constraintStart_toStartOf="@+id/container"
            app:layout_constraintTop_toBottomOf="@+id/adicione4" />

        <EditText
            android:id="@+id/campo5"
            android:layout_width="90dp"
            android:layout_marginTop="16dp"
            android:height="45dp"
            android:gravity="center"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:textSize="8sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/container"
            app:layout_constraintHorizontal_bias="0.978"
            app:layout_constraintStart_toStartOf="@+id/container"
            app:layout_constraintTop_toBottomOf="@id/campo4"
            android:layout_height="0dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_enviar"
            style="@style/button"
            android:layout_width="199dp"
            android:layout_height="43dp"
            android:layout_marginBottom="4dp"
            android:text="@string/enviar"
            android:textSize="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/container"
            app:layout_constraintStart_toStartOf="@+id/container" />


      </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <!-- Barra inferior -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="77dp"
        android:background="@color/white"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:contentInsetEnd="0dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:baselineAligned="false"
          android:orientation="horizontal"
          android:gravity="center"
          android:paddingHorizontal="8dp"
          android:weightSum="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
          <ImageView
              android:id="@+id/btn_usuario"
              android:layout_width="44dp"
              android:layout_height="44dp"
              android:src="@drawable/profile"
              android:contentDescription="@string/perfil"
              android:scaleType="fitCenter" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
          <ImageView
              android:id="@+id/btn_historico"
              android:layout_width="44dp"
              android:layout_height="44dp"
              android:src="@drawable/historico"
              android:contentDescription="@string/historico"
              android:scaleType="fitCenter" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
          <ImageView
              android:id="@+id/btn_adicionar"
              android:layout_width="44dp"
              android:layout_height="44dp"
              android:src="@drawable/adicionar"
              android:background="@drawable/cirgulo"
              android:contentDescription="@string/adicionar"
              android:scaleType="fitCenter" />
        </LinearLayout>
      </LinearLayout>
    </com.google.android.material.appbar.MaterialToolbar>
  </androidx.constraintlayout.widget.ConstraintLayout>

  <!-- Menu lateral -->
  <com.google.android.material.navigation.NavigationView
      android:id="@+id/nv_side"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_gravity="start"
      android:fitsSystemWindows="true"
      android:layout_marginBottom="90dp"
      app:itemTextColor="@color/black"
      app:menu="@menu/side_libs" />
</androidx.drawerlayout.widget.DrawerLayout>
